tests/reference/asr-test_pow4-ef60978.stderr
style suggestion: Could have used '**' instead of 'pow'
  --> tests/errors/test_pow4.py:10:11
   |
10 |     print(pow(x, a, b))
   |           ^^^^^^^^^^^^ '**' could be used instead

semantic error: Arguments do not match for any generic procedure, pow
  --> tests/errors/test_pow4.py:10:11
   |
10 |     print(pow(x, a, b))
   |           ^^^^^^^^^^^^ 
